--- a/paginas/SobreNosotros.html
+++ b/paginas/SobreNosotros.html
@@ -23,11 +23,11 @@
                     <h2>Ristorante <span class="verde">Na</span><span>po</span><span class="rojo">les</span></h2>
                 </div>
                 <nav class="navegacion ocultar">
-                    <a href="../Index.html">Inicio</a>
+                    <a href="../index.html">Inicio</a>
                     <a href="./paginas/SobreNosotros.html">Sobre Nosotros</a>
-                    <a href="./paginas/Menu.html">Menú</a>
+                    
                     <a href="./paginas/Chef.html">Chef</a>
-                    <a href="./paginas/Contacto.html">Contacto</a>
+                    
                 </nav>
                 <div class="hamburguesa">
                     <span></span><span></span><span></span>
