--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
                     <h2>Ristorante <span class="verde">Na</span><span>po</span><span class="rojo">les</span></h2>
                 </div>
                 <nav class="navegacion ocultar">
-                    <a href="./Index.html">Inicio</a>
+                    <a href="./index.html">Inicio</a>
                     <a href="./paginas/SobreNosotros.html">Sobre Nosotros</a>
                     <a href="./paginas/Chef.html">Chef</a>
                     
