--- a/index.html
+++ b/index.html
@@ -261,7 +261,10 @@
 
 
     </div>
-   
+        <footer class="footer">
+        <p>Todos los derechos reservados &copy; 2018 Ristorante Napoles </p>
+    </footer>
+
 
     <script src="js/app.js"></script>
 
